frontend/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_APP_NAME}-svc
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${K8S_APP_NAME}
spec:
  selector:
    app: ${K8S_APP_NAME}
  ports:
    - name: app-listener
      protocol: TCP
      port: ${K8S_SERVICE_PORT}
      targetPort: ${K8S_CONTAINER_PORT}
  type: ClusterIP
